[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation Module for VTEnrichHash"
description = "Enrich a file hash (MD5/SHA1/SHA256) via VirusTotal v3 API"
version = "0.0"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sekoia-automation-sdk = "^1.13.0"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
requests-mock = "*"

[tool.black]
line-length = 119
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = ["tests/*", "main.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = """
  --strict-markers
  --tb=short
  --cov=vtenrichhash_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --capture=sys
"""
