[project]
name = "vtenrichhash-module"
version = "0.0"
description = "Enrich a file hash (MD5/SHA1/SHA256) via VirusTotal v3 API"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sekoia-automation-sdk>=1.0",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "requests-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov=vtenrichhash_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --capture=sys
'''
